--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Title</title>
 </head>
 <body>
-<script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="script.js"> </script>
+<p>dfgd</p>
 </body>
 </html>
